Removed cancel button from admin login, made it so if you click a new settings the current prompt gets replaced by the new one.

--- a/Signin/SigninPage.html
+++ b/Signin/SigninPage.html
@@ -70,8 +70,7 @@
              font-size: 18px; font: var(--font); margin-bottom: 10px"> Admin Password</label>
         <input id = pword name = pword type = password>
         <div id="pwordcontrols">
-            <input class = pwc type = submit value= "OK">
-            <input class = pwc type = button value = "Cancel" onclick = adminPrompt()>
+            <input class = pwc type = submit value= "Enter">
         </div>
     </form>
 
