--- a/InharmonicityTesting/InharmonicityTesting.html
+++ b/InharmonicityTesting/InharmonicityTesting.html
@@ -28,7 +28,7 @@
         <input type = button id = tone2 value = "Tone 2">
     </div>
 
-    <h3 id = question> Which tone is more inharmonic?</h3>
+    <h3 id = question>Which tone is more inharmonic (rough, dissonant, and out-of-tune)?</h3>
 
     <form id = submitdata method = post action = InharmonicityTesting.php>
         <input type = hidden name = results id = results>
