--- a/Training/Training.html
+++ b/Training/Training.html
@@ -64,6 +64,6 @@
     </h3>
 </body>
 <script>
-    document.addEventListener('DOMContentLoaded', function () {loadCanvas(); play()}); //loadNoise();
+    document.addEventListener('DOMContentLoaded', function () {loadCanvas(); loadNoise(); play()});
 </script>
 </html>
