Working on having the ui show up after the noise plays for the testing modules

--- a/InharmonicityTesting/InharmonicityTesting.html
+++ b/InharmonicityTesting/InharmonicityTesting.html
@@ -8,7 +8,6 @@
     <title>Inharmonicity Testing</title>
     <link rel="stylesheet" href="../Style.css">
     <link rel="stylesheet" href="../LED.css">
-    <link rel="stylesheet" href="../InharmonicityTesting/InharmonicityTesting.css">
     <script type = text/javascript src = "InharmonicityTesting.js"></script>
 </head>
 <body>
@@ -23,12 +22,12 @@
         </div>
     </div>
 
-    <div id = itui>
+    <div id = testui>
         <input type = button id = tone1 value = "Tone 1">
         <input type = button id = tone2 value = "Tone 2">
     </div>
 
-    <h3 id = question>Which tone is more inharmonic (rough, dissonant, and out-of-tune)?</h3>
+    <h3 id = question>Which tone is more inharmonic (rough, out-of-tune)?</h3>
 
     <form id = submitdata method = post action = InharmonicityTesting.php>
         <input type = hidden name = results id = results>
