Having buttons appear after sound bug fix.

--- a/LoudnessMatching/LoudnessMatching.html
+++ b/LoudnessMatching/LoudnessMatching.html
@@ -42,6 +42,6 @@
 
 <script>
     ledReset();
-    document.addEventListener('DOMContentLoaded', function () {eventSetup();loadNoise();main();});
+    document.addEventListener('DOMContentLoaded', function () {eventSetup();main();});
 </script>
 </html>
