Added TE Noise to training module.

--- a/Training/Training.html
+++ b/Training/Training.html
@@ -64,6 +64,7 @@
     </h3>
 </body>
 <script>
-    document.addEventListener('DOMContentLoaded', function () {loadCanvas(); loadNoise(); play()});
+    document.addEventListener('DOMContentLoaded', function () {loadCanvas(); loadNoise();
+    setTimeout(function (){play();}, 10)});
 </script>
 </html>
