Working on normalizing layout

--- a/SpeechTestingSNR/SpeechTestingSNR.html
+++ b/SpeechTestingSNR/SpeechTestingSNR.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div id = wordselect style="display: none">
+    <div id = testui style="display: none">
         <input type = button id = c1 onclick="buttonClick(1)">
         <input type = button id = c2 onclick="buttonClick(2)">
         <input type = button id = c3 onclick="buttonClick(3)">
