Redid layout formatting for startpages.

--- a/LoudnessMatching/LoudnessMatchingStart.html
+++ b/LoudnessMatching/LoudnessMatchingStart.html
@@ -16,17 +16,16 @@
         </h2>
 
         <h3>
-            Directions: You will hear two consecutive tones, one high tone and one low tone.
+            You will hear two consecutive tones, one high tone and one low tone.
             For each trial, select the tone that sounds loudest. If they are the same volume,
             select "same" to complete part 1.
         </h3>
+        <form id = start action = LoudnessMatching.html method = post>
+            <input id = startbutton type = submit value = "Start Test">
+        </form>
         <input id = exit type = button value = 'EXIT' onclick = "location.href =
     '/Implant%20Testing%20Program/Signin/SigninPage.html'">
     </div>
-
-    <form id = start action = LoudnessMatching.html method = post>
-        <input id = startbutton type = submit value = "Start Test">
-    </form>
 </body>
 
 <script>
