--- a/SpeechTestingPractice/SpeechTestingPracticeStart.html
+++ b/SpeechTestingPractice/SpeechTestingPracticeStart.html
@@ -10,6 +10,7 @@
     <script type = text/javascript src = "SpeechTestingPractice.js"></script>
 </head>
 <body>
+<div id = direction>
     <h2>
         Speech Testing Practice
     </h2>
@@ -17,9 +18,8 @@
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
     '/Implant%20Testing%20Program/Signin/SigninPage.html'">
 
-    <div id = direction>
     <h3>
-        Directions: In this test, you will hear a word spoken by either a male voice or a female voice. You will also
+        In this test, you will hear a word spoken by either a male voice or a female voice. You will also
         hear noise playing at the same time. 4 word choices will be displayed on the screen. Try to ignore the noise and
         choose the word that best matches the spoken word.
     </h3>
