--- a/ThresholdTesting/ThresholdTestingStart.html
+++ b/ThresholdTesting/ThresholdTestingStart.html
@@ -16,17 +16,17 @@
     </h2>
 
     <h3>
-        Directions: In this test, you will hear two consecutive tones of the same frequency.
+        In this test, you will hear two consecutive tones of the same frequency.
         Respond with "yes" or "no" depending on whether you heard the beeps or not. You will
         be asked to repeat this process for 6 more frequencies.
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
     '/Implant%20Testing%20Program/Signin/SigninPage.html'">
-</div>
 
-<form id = start action = ThresholdTesting.html method = post>
-    <input id = startbutton type = submit value = "Start Test">
-</form>
+    <form id = start action = ThresholdTesting.html method = post>
+        <input id = startbutton type = submit value = "Start Test">
+    </form>
+</div>
 </body>
 <script>
     let d = new Date();
