--- a/Training/TrainingStart.html
+++ b/Training/TrainingStart.html
@@ -16,7 +16,7 @@
     </h2>
 
     <h3>
-        Directions: In this task, you will see a large box. After hitting the go button, the program will produce a tone that
+        In this training, you will see a large box. After hitting the go button, the program will produce a tone that
         changes in pitch depending on your mouse's location in the box. Your goal is to find two points that create
         the most harmonic sounding line. Once you've found a point, click on the box to select the point. Once you've
         selected two points, the line you created will appear along with the actual line of harmonicity and a grade of
@@ -24,11 +24,11 @@
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
     '/Implant%20Testing%20Program/Signin/SigninPage.html'">
-</div>
 
-<form id = start action = Training.html method = post>
-    <input id = startbutton type = submit value = "Start Training">
-</form>
+    <form id = start action = Training.html method = post>
+        <input id = startbutton type = submit value = "Start Training">
+    </form>
+</div>
 </body>
 <script>
     let d = new Date();
