--- a/InharmonicityTesting/InharmonicityTestingStart.html
+++ b/InharmonicityTesting/InharmonicityTestingStart.html
@@ -16,16 +16,15 @@
     </h2>
 
     <h3>
-        Directions: In this test, you will hear two consecutive tones. For each trial, pick the tone
+        In this test, you will hear two consecutive tones. For each trial, pick the tone
         that sounds more inharmonic.
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
     '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    <form id = start action = InharmonicityTesting.html method = post>
+        <input id = startbutton type = submit value = "Start Test">
+    </form>
 </div>
-
-<form id = start action = InharmonicityTesting.html method = post>
-    <input id = startbutton type = submit value = "Start Test">
-</form>
 </body>
 <script>
     let d = new Date();
