--- a/SpeechTesting/SpeechTestingStart.html
+++ b/SpeechTesting/SpeechTestingStart.html
@@ -16,17 +16,16 @@
     </h2>
 
     <h3>
-        Directions: In this test, you will hear a word spoken by either a male voice or a female voice. You will also
+        In this test, you will hear a word spoken by either a male voice or a female voice. You will also
         hear noise playing at the same time. 4 word choices will be displayed on the screen. Try to ignore the noise and
         choose the word that best matches the spoken word.
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
     '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    <form id = start action = SpeechTesting.html method = post>
+        <input id = startbutton type = submit value = "Start Test">
+    </form>
 </div>
-
-<form id = start action = SpeechTesting.html method = post>
-    <input id = startbutton type = submit value = "Start Test">
-</form>
 </body>
 <script>
     let d = new Date();
