--- a/SpeechTestingSNR/SpeechTestingSNRStart.html
+++ b/SpeechTestingSNR/SpeechTestingSNRStart.html
@@ -17,7 +17,7 @@
     </h2>
 
     <h3>
-        Directions: In this test, you will hear a word spoken by either a male voice or a female voice. You will also
+        In this test, you will hear a word spoken by either a male voice or a female voice. You will also
         hear noise playing at the same time. 4 word choices will be displayed on the screen. Try to ignore the noise and
         choose the word that best matches the spoken word.
     </h3>
@@ -42,12 +42,11 @@
     </div>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
     '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    <form id = start action = SpeechTestingSNR.html method = post>
+        <p id = snrhint>Please Select SNR Difficulty</p>
+        <input id = startbutton style = "display: none" type = submit value = "Start Test">
+    </form>
 </div>
-
-<form id = start action = SpeechTestingSNR.html method = post>
-    <p id = snrhint>Please Select SNR Difficulty</p>
-    <input id = startbutton style = "display: none" type = submit value = "Start Test">
-</form>
 </body>
 <script>
     let d = new Date();
