More layout fixes

--- a/LoudnessMatching/LoudnessMatching.html
+++ b/LoudnessMatching/LoudnessMatching.html
@@ -37,7 +37,7 @@
         <input type = submit  id = "neither" value = "Same">
     </form>
 
-    <h3 id = question> Which tone is louder?</h3>
+    <div id = question> Which tone is louder?</div>
 </body>
 
 <script>
