--- a/InharmonicityTesting/InharmonicityTesting.html
+++ b/InharmonicityTesting/InharmonicityTesting.html
@@ -27,7 +27,7 @@
         <input type = button id = tone2 value = "Tone 2">
     </div>
 
-    <h3 id = question>Which tone is more inharmonic (rough, out-of-tune)?</h3>
+    <div id = question>Which tone is more inharmonic (rough, out-of-tune)?</div>
 
     <form id = submitdata method = post action = InharmonicityTesting.php>
         <input type = hidden name = results id = results>
