--- a/ThresholdTesting/ThresholdTesting.html
+++ b/ThresholdTesting/ThresholdTesting.html
@@ -24,7 +24,7 @@
         <input type = button id = tone2 value = NO onclick = main(2)>
     </form>
 
-    <h3 id = question> </h3>
+    <div id = question> </div>
 
     <form id = storedata method = post action = ThresholdTesting.php>
         <input id = freq name = freq type = hidden>
