--- a/LoudnessMatching/LoudnessMatching.html
+++ b/LoudnessMatching/LoudnessMatching.html
@@ -16,7 +16,7 @@
     <h2 id = trial>Trial: 1</h2>
 
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
 
     <div class="container">
         <div class="led-box">
