--- a/LoudnessMatching/LoudnessMatchingStart.html
+++ b/LoudnessMatching/LoudnessMatchingStart.html
@@ -24,7 +24,7 @@
             <input id = startbutton type = submit value = "Start Test">
         </form>
         <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
     </div>
 </body>
 
