--- a/Secure/Secure.html
+++ b/Secure/Secure.html
@@ -15,7 +15,7 @@
     <h1>User Data</h1>
 
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
 
     <button type = button class="mdc-icon-button material-icons" id = actionButton>delete</button>
 
