--- a/Signin/Signin.html
+++ b/Signin/Signin.html
@@ -61,7 +61,7 @@
             <input type = button class = dropdownitem value = 'Signout' onclick = "sessionStorage.removeItem('name');
             sessionStorage.removeItem('isFromSignin');
             location.href =
-            '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+            '/Implant%20Testing%20Program/Signin/Signin.html'">
         </div>
     </div>
 
