--- a/SpeechTesting/SpeechTestingStart.html
+++ b/SpeechTesting/SpeechTestingStart.html
@@ -21,7 +21,7 @@
         choose the word that best matches the spoken word.
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
     <form id = start action = SpeechTesting.html method = post>
         <input id = startbutton type = submit value = "Start Test">
     </form>
