--- a/SpeechTestingPractice/SpeechTestingPracticeStart.html
+++ b/SpeechTestingPractice/SpeechTestingPracticeStart.html
@@ -16,7 +16,7 @@
     </h2>
 
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
 
     <h3>
         In this test, you will hear a word spoken by either a male voice or a female voice. You will also
