--- a/SpeechTestingSNR/SpeechTestingSNR.html
+++ b/SpeechTestingSNR/SpeechTestingSNR.html
@@ -17,7 +17,7 @@
 
     <input id = exit type = button value = 'EXIT'
            onclick = "document.cookie = 'frequency=; expires=Thu, 01 Jan 1970 00:00:01 GMT';
-            location.href = '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+            location.href = '../Signin/Signin.html'">
     <div class="container">
         <div class="led-box">
             <div class="led-red" id = led-red></div>
