--- a/SpeechTestingSNR/SpeechTestingSNRStart.html
+++ b/SpeechTestingSNR/SpeechTestingSNRStart.html
@@ -41,7 +41,7 @@
         <p style = "color: rgba(219, 37, 37, 0.3); width: 200px; font-weight: lighter; font: var(--font)">hardest</p>
     </div>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
     <form id = start action = SpeechTestingSNR.html method = post>
         <p id = snrhint>Please Select SNR Difficulty</p>
         <input id = startbutton style = "display: none" type = submit value = "Start Test">
