--- a/ThresholdTesting/ThresholdTestingStart.html
+++ b/ThresholdTesting/ThresholdTestingStart.html
@@ -21,7 +21,7 @@
         be asked to repeat this process for 6 more frequencies.
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
 
     <form id = start action = ThresholdTesting.html method = post>
         <input id = startbutton type = submit value = "Start Test">
