--- a/Training/TrainingStart.html
+++ b/Training/TrainingStart.html
@@ -23,7 +23,7 @@
         how close you got to the line. To continue onto the next trial, hit the go button.
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
 
     <form id = start action = Training.html method = post>
         <input id = startbutton type = submit value = "Start Training">
