--- a/InharmonicityTesting/InharmonicityTestingStart.html
+++ b/InharmonicityTesting/InharmonicityTestingStart.html
@@ -20,7 +20,7 @@
         that sounds more inharmonic.
     </h3>
     <input id = exit type = button value = 'EXIT' onclick = "location.href =
-    '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+    '../Signin/Signin.html'">
     <form id = start action = InharmonicityTesting.html method = post>
         <input id = startbutton type = submit value = "Start Test">
     </form>
