--- a/ThresholdTesting/ThresholdTesting.html
+++ b/ThresholdTesting/ThresholdTesting.html
@@ -17,7 +17,7 @@
 
     <input id = exit type = button value = 'EXIT'
            onclick = "document.cookie = 'frequency=; expires=Thu, 01 Jan 1970 00:00:01 GMT';
-            location.href = '/Implant%20Testing%20Program/Signin/SigninPage.html'">
+            location.href = '../Signin/Signin.html'">
 
     <form id = testui>
         <input type = button id = tone1 value = YES onclick = main(1)>
