Added score onto end of snr speech noise testing module

--- a/SpeechTestingSNR/SpeechTestingSNR.html
+++ b/SpeechTestingSNR/SpeechTestingSNR.html
@@ -38,5 +38,16 @@
         <input type = hidden name = starttime id = starttime>
         <input type = hidden name = endtime id = endtime>
     </form>
+
+    <div id = finalscore>
+        <div id = text>
+            Final Score
+        </div>
+        <div id = number>
+
+        </div>
+        <input value = Continue type = button id = endSNR onclick=saveData()>
+    </div>
+
 </body>
 </html>
