Fixed issue where training wasn't playing.

--- a/Training/Training.html
+++ b/Training/Training.html
@@ -59,12 +59,12 @@
     <h2 id = grade>
     </h2>
 
-    <h3 id = hint>
+    <div id = hint>
         *The gradient line is the target area. The darker the line is, the more harmonic the sound will be.
-    </h3>
+    </div>
 </body>
 <script>
-    document.addEventListener('DOMContentLoaded', function () {loadCanvas(); loadNoise();
-    setTimeout(function (){play();}, 50)});
+    document.addEventListener('DOMContentLoaded', function () {loadCanvas(); loadNoise();});
+    // setTimeout(function (){play();}, 10)});
 </script>
 </html>
