Added SNR value to speech testing saved data. Added new col to database also.

--- a/SpeechTestingSNR/SpeechTestingSNR.html
+++ b/SpeechTestingSNR/SpeechTestingSNR.html
@@ -35,6 +35,7 @@
         <input type = hidden id = "outcome" name = outcome>
         <input type = hidden name = "subj" id = "subj">
         <input type = hidden name = "numc" id = "numc">
+        <input type = hidden name = "snrval" id = "snrval">
         <input type = hidden name = starttime id = starttime>
         <input type = hidden name = endtime id = endtime>
     </form>
