Working on new gradient

--- a/SpeechTestingSNR/SpeechTestingSNR.html
+++ b/SpeechTestingSNR/SpeechTestingSNR.html
@@ -31,7 +31,7 @@
         <input type = button id = c4 onclick="buttonClick(4)">
     </div>
 
-    <form id = "speechsave" method = post action = SpeechTestingSNR.php>
+    <form id = "speechsaveSNR" method = post action = SpeechTestingSNR.php>
         <input type = hidden id = "outcome" name = outcome>
         <input type = hidden name = "subj" id = "subj">
         <input type = hidden name = "numc" id = "numc">
