--- a/Training/Training.html
+++ b/Training/Training.html
@@ -23,7 +23,13 @@
             <div class="led-red" id = led-red></div>
         </div>
     </div>
+
+    <div id = border>
+        <div id = gradient></div>
+    </div>
+
     <canvas id = "canvas"></canvas>
+
 
     <form id = dbSubmit method = "post" action = "Training.php">
         <input type = hidden name = "mousepos" id = "mousepos">
