--- a/Training/Training.html
+++ b/Training/Training.html
@@ -8,7 +8,7 @@
     <title>Training</title>
     <link rel="stylesheet" href="../Style.css">
     <link rel="stylesheet" href="../LED.css">
-    <link rel="stylesheet" href="../Training/Training.css">
+    <link rel="stylesheet" href="Training.css">
     <script type = text/javascript src = "Training.js"></script>
 </head>
 <body>
